Stop using notCompute in favor of controller
Updates all references for notCompute and notcompute
to use 'controller' instead.

Change-Id: I70ef83f35064ab388bdc7e1a6da62b6585580010
Partial-bug: #1300324

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -32,7 +32,7 @@ Resources:
         Ref: BlockStorageUser
   BlockStorage0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
-    DependsOn: notCompute0Config
+    DependsOn: controller0Config
     Properties:
       Handle: {Ref: BlockStorage0CompletionHandle}
       Count: '1'
@@ -74,9 +74,9 @@ Resources:
           path: BlockStorage0Config.Metadata
       admin-password: {Ref: AdminPassword}
       keystone:
-        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
       cinder:
-        db: {"Fn::Join": ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] } , '/cinder']]}
+        db: {"Fn::Join": ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] } , '/cinder']]}
         volume_size_mb: '5000'
         service-password:
           Ref: CinderPassword
@@ -84,7 +84,7 @@ Resources:
           Ref: CinderISCSIHelper
       admin-password: {Ref: AdminPassword}
       rabbit:
-        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
         username: {Ref: RabbitUserName}
         password: {Ref: RabbitPassword}
       interfaces:
