--- a/controller.yaml
+++ b/controller.yaml
@@ -82,7 +82,7 @@ Parameters:
     Description: admin_password for setting up auth in nova.
     Type: String
     NoEcho: true
-  notcomputeImage:
+  controllerImage:
     Type: String
   HeatStackDomainAdminPassword:
     Description: Password for heat_domain_admin user.
@@ -93,9 +93,9 @@ Resources:
   AccessPolicy:
     Properties:
       AllowedResources:
-      - notCompute0
+      - controller0
     Type: OS::Heat::AccessPolicy
-  notCompute0Key:
+  controller0Key:
     Properties:
       UserName:
         Ref: User
@@ -105,7 +105,7 @@ Resources:
       Policies:
       - Ref: AccessPolicy
     Type: AWS::IAM::User
-  notCompute0:
+  controller0:
     Metadata:
       OpenStack::ImageBuilder::Elements:
       - nova-api
@@ -155,12 +155,12 @@ Resources:
               - {Ref: HeatDBPassword}
               - '@127.0.0.1/heat'
         access_key_id:
-          Ref: notCompute0Key
+          Ref: controller0Key
         refresh:
-        - resource: notCompute0
+        - resource: controller0
         secret_key:
           Fn::GetAtt:
-          - notCompute0Key
+          - controller0Key
           - SecretAccessKey
         stack:
           name:
@@ -217,7 +217,7 @@ Resources:
         Ref: ServicePassword
     Properties:
       ImageId:
-        Ref: notcomputeImage
+        Ref: controllerImage
       InstanceType:
         Ref: InstanceType
       KeyName:
