--- a/nfs-server-source.yaml
+++ b/nfs-server-source.yaml
@@ -1,6 +1,6 @@
 Description: 'NFS server share configuration for testing'
 Resources:
-  notCompute0Config:
+  controller0Config:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
       nfs_server:
