--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -125,7 +125,7 @@ Parameters:
     Default: ''
     Description: If set, the public interface is a vlan with this device as the raw device.
     Type: String
-  notcomputeImage:
+  controllerImage:
     Type: String
     Default: overcloud-control
   NtpServer:
@@ -184,8 +184,8 @@ Resources:
   AccessPolicy:
     Properties:
       AllowedResources:
-      - notCompute0
-      - notCompute0Config
+      - controller0
+      - controller0Config
     Type: OS::Heat::AccessPolicy
   ComputeAccessPolicy:
     Properties:
@@ -193,19 +193,19 @@ Resources:
       - NovaCompute0
       - NovaCompute0Config
     Type: OS::Heat::AccessPolicy
-  notCompute0Key:
+  controller0Key:
     Properties:
       UserName:
         Ref: User
     Type: AWS::IAM::AccessKey
-  notCompute0CompletionCondition:
+  controller0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
-    DependsOn: notCompute0Config
+    DependsOn: controller0Config
     Properties:
-      Handle: {Ref: notCompute0CompletionHandle}
+      Handle: {Ref: controller0CompletionHandle}
       Count: '1'
       Timeout: '1800'
-  notCompute0CompletionHandle:
+  controller0CompletionHandle:
     Type: OS::Heat::UpdateWaitConditionHandle
   NovaCompute0Key:
     Type: FileInclude
@@ -229,14 +229,14 @@ Resources:
     Path: nova-compute-instance.yaml
     SubKey: Resources.NovaCompute0Config
     Parameters:
-        NovaApiHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
-        KeystoneHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
-        RabbitHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
-        NeutronHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
-        GlanceHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
-        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ]}, '/nova']]}
-        CeilometerDSN: {"Fn::Join": ['', ['mysql://ceilometer:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ]}, '/ceilometer']]}
-        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ]}, '/neutron']]}
+        NovaApiHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+        KeystoneHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+        RabbitHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+        NeutronHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+        GlanceHost: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+        NovaDSN: {"Fn::Join": ['', ['mysql://nova:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ]}, '/nova']]}
+        CeilometerDSN: {"Fn::Join": ['', ['mysql://ceilometer:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ]}, '/ceilometer']]}
+        NeutronDSN: {"Fn::Join": ['', ['mysql://neutron:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ]}, '/neutron']]}
         NeutronNetworkType: "gre"
         NeutronEnableTunnelling: "True"
         NeutronFlatNetworks:
@@ -284,7 +284,7 @@ Resources:
                   - Fn::Select:
                     - ctlplane
                     - Fn::GetAtt:
-                      - notCompute0
+                      - controller0
                       - networks
                 - {Ref: CloudName}
                 # If CloudName is unset, make the hosts line still valid
@@ -298,7 +298,7 @@ Resources:
       Policies:
       - Ref: AccessPolicy
     Type: AWS::IAM::User
-  notCompute0Config:
+  controller0Config:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       ImageId: '0'
@@ -325,14 +325,14 @@ Resources:
         iscsi-helper:
           Ref: CinderISCSIHelper
       completion-handle:
-        Ref: notCompute0CompletionHandle
+        Ref: controller0CompletionHandle
       controller-address:
         Fn::Select:
          - 0
          - Fn::Select:
              - 'ctlplane'
              - Fn::GetAtt:
-               - notCompute0
+               - controller0
                - networks
       db-password: unset
       glance:
@@ -344,7 +344,7 @@ Resources:
            - Fn::Select:
                - 'ctlplane'
                - Fn::GetAtt:
-                 - notCompute0
+                 - controller0
                  - networks
         service-password:
           Ref: GlancePassword
@@ -372,7 +372,7 @@ Resources:
                 - Fn::Select:
                   - 'ctlplane'
                   - Fn::GetAtt:
-                    - notCompute0
+                    - controller0
                     - networks
               - ':8003'
         metadata_server_url:
@@ -384,7 +384,7 @@ Resources:
                 - Fn::Select:
                   - 'ctlplane'
                   - Fn::GetAtt:
-                    - notCompute0
+                    - controller0
                     - networks
               - ':8000'
         waitcondition_server_url:
@@ -396,7 +396,7 @@ Resources:
                 - Fn::Select:
                   - 'ctlplane'
                   - Fn::GetAtt:
-                    - notCompute0
+                    - controller0
                     - networks
               - ':8000/v1/waitcondition'
       hosts:
@@ -407,7 +407,7 @@ Resources:
             - Fn::Select:
               - ctlplane
               - Fn::GetAtt:
-                - notCompute0
+                - controller0
                 - networks
           - {Ref: CloudName}
       keystone:
@@ -418,7 +418,7 @@ Resources:
             - Fn::Select:
               - 'ctlplane'
               - Fn::GetAtt:
-                - notCompute0
+                - controller0
                 - networks
       mysql:
         innodb_buffer_pool_size: {Ref: MysqlInnodbBufferPoolSize}
@@ -430,7 +430,7 @@ Resources:
             - Fn::Select:
               - ctlplane
               - Fn::GetAtt:
-                - notCompute0
+                - controller0
                 - networks
         metadata_proxy_shared_secret: unset
         ovs:
@@ -441,7 +441,7 @@ Resources:
               - Fn::Select:
                 - ctlplane
                 - Fn::GetAtt:
-                  - notCompute0
+                  - controller0
                   - networks
           bridge_mappings: {Ref: NeutronBridgeMappings}
           public_interface:
@@ -471,7 +471,7 @@ Resources:
             - Fn::Select:
               - 'ctlplane'
               - Fn::GetAtt:
-                - notCompute0
+                - controller0
                 - networks
         metadata-proxy: true
         service-password:
@@ -479,11 +479,11 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: notCompute0Key
-          path: notCompute0Config.Metadata
+            Ref: controller0Key
+          path: controller0Config.Metadata
           secret_access_key:
             Fn::GetAtt:
-            - notCompute0Key
+            - controller0Key
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
@@ -494,7 +494,7 @@ Resources:
             - Fn::Select:
               - ctlplane
               - Fn::GetAtt:
-                - notCompute0
+                - controller0
                 - networks
         username:
           Ref: RabbitUserName
@@ -507,11 +507,11 @@ Resources:
       ntp:
         servers:
             - {server: {Ref: NtpServer}, fudge: "stratum 0"}
-  notCompute0:
+  controller0:
     Type: OS::Nova::Server
     Properties:
       image:
-        Ref: notcomputeImage
+        Ref: controllerImage
       image_update_policy:
         Ref: ImageUpdatePolicy
       flavor:
@@ -522,11 +522,11 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: notCompute0Key
-          path: notCompute0Config.Metadata
+            Ref: controller0Key
+          path: controller0Config.Metadata
           secret_access_key:
             Fn::GetAtt:
-            - notCompute0Key
+            - controller0Key
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
@@ -542,6 +542,6 @@ Outputs:
           - Fn::Select:
             - ctlplane
             - Fn::GetAtt:
-              - notCompute0
+              - controller0
               - networks
         - :5000/v2.0/
