--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -11,7 +11,7 @@ Parameters:
     Type: String
     NoEcho: true
 Resources:
-  notCompute0Config:
+  controller0Config:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
       swift:
@@ -26,7 +26,7 @@ Resources:
                   - Fn::Select:
                     - 'ctlplane'
                     - Fn::GetAtt:
-                      - notCompute0
+                      - controller0
                       - networks
                 - ':%PORT%/d1'
             - Fn::Join:
