--- a/block-storage-nfs.yaml
+++ b/block-storage-nfs.yaml
@@ -25,7 +25,7 @@ Resources:
         Ref: BlockStorageUser
   BlockStorage0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
-    DependsOn: notCompute0Config
+    DependsOn: controller0Config
     Properties:
       Handle: {Ref: BlockStorage0CompletionHandle}
       Count: '1'
@@ -51,18 +51,18 @@ Resources:
           stack_name: {Ref: 'AWS::StackName'}
       OpenStack::ImageBuilder::Elements: [ cinder ]
       keystone:
-        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
       cinder:
-        db: {"Fn::Join": ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] } , '/cinder']]}
+        db: {"Fn::Join": ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] } , '/cinder']]}
         volume_size_mb: '5000'
         service-password:
           Ref: CinderPassword
         include_nfs_backend: 'true'
         nfs_shares:
-          - {"Fn::Join": ['', [{"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] } , ':/mnt/state/var/lib/nfs_share']]}
+          - {"Fn::Join": ['', [{"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] } , ':/mnt/state/var/lib/nfs_share']]}
       admin-password: {Ref: AdminPassword}
       rabbit:
-        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [notCompute0, networks]} ]} ] }
+        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
         username: {Ref: RabbitUserName}
         password: {Ref: RabbitPassword}
       interfaces:
