--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -129,7 +129,7 @@ Resources:
         Ref: ComputeUser
   NovaCompute0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
-    DependsOn: notCompute0Config
+    DependsOn: controller0Config
     Properties:
       Handle: {Ref: NovaCompute0CompletionHandle}
       Count: '1'
