--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -32,7 +32,7 @@ Resources:
         Ref: SwiftStorageUser
   SwiftStorage0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
-    DependsOn: notCompute0Config
+    DependsOn: controller0Config
     Properties:
       Handle: {Ref: SwiftStorage0CompletionHandle}
       Count: '1'
@@ -99,7 +99,7 @@ Resources:
                   - Fn::Select:
                     - 'ctlplane'
                     - Fn::GetAtt:
-                      - notCompute0
+                      - controller0
                       - networks
                 - ':%PORT%/d1'
             - Fn::Join:
