--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -93,19 +93,19 @@ Resources:
       AllowedResources:
       - undercloudConfig
     Type: OS::Heat::AccessPolicy
-  notCompute0Key:
+  controller0Key:
     Properties:
       UserName:
         Ref: User
     Type: AWS::IAM::AccessKey
-  notCompute0CompletionCondition:
+  controller0CompletionCondition:
     Type: AWS::CloudFormation::WaitCondition
     DependsOn: undercloud
     Properties:
-      Handle: {Ref: notCompute0CompletionHandle}
+      Handle: {Ref: controller0CompletionHandle}
       Count: '1'
       Timeout: '1800'
-  notCompute0CompletionHandle:
+  controller0CompletionHandle:
     Type: AWS::CloudFormation::WaitConditionHandle
   User:
     Properties:
@@ -137,7 +137,7 @@ Resources:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
       completion-handle:
-        Ref: notCompute0CompletionHandle
+        Ref: controller0CompletionHandle
       db-password: unset
       glance:
         backend: file
@@ -196,11 +196,11 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: notCompute0Key
+            Ref: controller0Key
           path: undercloudConfig.Metadata
           secret_access_key:
             Fn::GetAtt:
-            - notCompute0Key
+            - controller0Key
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
@@ -248,11 +248,11 @@ Resources:
       os-collect-config:
         cfn:
           access_key_id:
-            Ref: notCompute0Key
+            Ref: controller0Key
           path: undercloudConfig.Metadata
           secret_access_key:
             Fn::GetAtt:
-            - notCompute0Key
+            - controller0Key
             - SecretAccessKey
           stack_name:
             Ref: AWS::StackName
