Add mysql innodb buffer pool size
Innodb buffer pool size in mysql config file is now set to 592M,
this value is for VMs with 2G RAM too much. This patch makes the
pool size configurable and decreases default value to 100 MB
(this should be sufficient for default devtest setup). A patch which
for tripleo-image-element which sets this value in my.cnf will follow.

Change-Id: I0d2529abe51d4dc34415bf6c40da7a267bf3e65b

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -77,6 +77,10 @@ Parameters:
     Type: String
     Default: ''
     NoEcho: true
+  MysqlInnodbBufferPoolSize:
+    Description: Specifies the size of the buffer pool in megabytes.
+    Type: Number
+    Default: 100
 Resources:
   RabbitCookie:
     Type: OS::Heat::RandomString
@@ -203,6 +207,8 @@ Resources:
       keystone:
         db: mysql://keystone:unset@localhost/keystone
         host: 127.0.0.1
+      mysql:
+        innodb_buffer_pool_size: {Ref: MysqlInnodbBufferPoolSize}
       neutron:
         host: 127.0.0.1
         ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
