--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -71,6 +71,14 @@ Parameters:
     Default: baremetal
     Description: Flavor for compute nodes to request when deploying.
     Type: String
+  GlancePort:
+    Default: 9292
+    Description: Glance port.
+    Type: String
+  GlanceProtocol:
+    Default: http
+    Description: Protocol to use when connecting to glance, set to https for SSL.
+    Type: String
   GlancePassword:
     Default: unset
     Description: The password for the glance service account, used by the glance services.
@@ -415,6 +423,10 @@ Resources:
           db: mysql://glance:unset@localhost/glance
           host:
             get_input: controller_host
+          port:
+            Ref: GlancePort
+          protocol:
+            Ref: GlanceProtocol
           service-password:
             Ref: GlancePassword
           swift-store-user: service:glance
