--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -80,6 +80,14 @@ Parameters:
     Default: baremetal
     Description: Flavor to request when deploying.
     Type: String
+  GlancePort:
+   Default: 9292
+   Description: Glance port.
+   Type: String
+  GlanceProtocol:
+   Default: http
+   Description: Protocol to use when connecting to glance, set to https for SSL.
+   Type: String
   GlancePassword:
     Default: unset
     Description: The password for the glance service account, used by the glance services.
@@ -194,6 +202,10 @@ Resources:
           backend: file
           db: mysql://glance:unset@localhost/glance
           host: 127.0.0.1
+          port:
+            Ref: GlancePort
+          protocol:
+            Ref: GlanceProtocol
           service-password:
             Ref: GlancePassword
           notifier-strategy:
