--- a/ssl-source.yaml
+++ b/ssl-source.yaml
@@ -10,6 +10,10 @@ Parameters:
     Description: If set, the contents of an SSL certificate .key file for encrypting SSL endpoints.
     Type: String
     NoEcho: true
+  SSLCACertificate:
+    Default: ''
+    Description: If set, the contents of an SSL certificate authority file.
+    Type: String
 Resources:
   SSLConfig:
     Type: OS::Heat::StructuredConfig
@@ -21,6 +25,8 @@ Resources:
             get_input: ssl_certificate
           key:
             get_input: ssl_key
+          cacert:
+            get_input: ssl_ca_certificate
           ports:
            - name: 'ec2'
              accept: 13773
