--- a/swift-deploy.yaml
+++ b/swift-deploy.yaml
@@ -43,3 +43,25 @@ Resources:
                             - SwiftStorage0
                             - networks
                       - ':%PORT%/d1'
+        swift_proxy_memcache:
+          Fn::Join:
+          - ', '
+          - - Fn::Join:
+              - ''
+              - - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+                - ':11211'
+            - Fn::Join:
+              - ', '
+              - Merge::Map:
+                  SwiftStorage0:
+                    Fn::Join:
+                    - ''
+                    - - Fn::Select:
+                        - 0
+                        - Fn::Select:
+                          - 'ctlplane'
+                          - Fn::GetAtt:
+                            - SwiftStorage0
+                            - networks
+                      - ':11211'
+
