--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -7,6 +7,7 @@ Resources:
           devices: { get_input: swift_devices }
           hash: { get_input: swift_hash_suffix }
           part-power: 10
+          proxy-memcache: { get_input: swift_proxy_memcache }
           replicas: 1
           service-password: { get_input: swift_password }
         neutron:
