--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -39,16 +39,37 @@ Resources:
                 - ':%PORT%/d1'
             - Fn::Join:
               - ', '
-              Merge::Map:
-                SwiftStorage0:
-                  Fn::Join:
-                  - ''
-                  - - 'r1z1-'
-                    - Fn::Select:
-                      - 0
+              - Merge::Map:
+                  SwiftStorage0:
+                    Fn::Join:
+                    - ''
+                    - - 'r1z1-'
                       - Fn::Select:
-                        - 'ctlplane'
-                        - Fn::GetAtt:
-                          - SwiftStorage0
-                          - networks
-                    - ':%PORT%/d1'
+                        - 0
+                        - Fn::Select:
+                          - 'ctlplane'
+                          - Fn::GetAtt:
+                            - SwiftStorage0
+                            - networks
+                      - ':%PORT%/d1'
+        swift_proxy_memcache:
+          Fn::Join:
+          - ', '
+          - - Fn::Join:
+              - ''
+              - - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {"Fn::GetAtt": [controller0, networks]} ]} ] }
+                - ':11211'
+            - Fn::Join:
+              - ', '
+              - Merge::Map:
+                  SwiftStorage0:
+                    Fn::Join:
+                    - ''
+                    - - Fn::Select:
+                        - 0
+                        - Fn::Select:
+                          - 'ctlplane'
+                          - Fn::GetAtt:
+                            - SwiftStorage0
+                            - networks
+                      - ':11211'
