Increase PXE deployment timeout for overcloud
The PXE deployment often times out on baremetal deployment with >5
overcloud nodes because the time being measured includes the
dd of the image, which can be slow when many images are sent
from the same undercloud host.

Ideally we'd make the image sizes smaller, and/or make the
undercloud cache the images more sanely.  It would also be
possible to split the timout to measure dd-time and boot-time
separately, but for now we just make the timeout configurable so
a user can raise it if they have problems.

Change-Id: I15540eec7a68eab4c9d128b65a95b1c0a2b64582
Co-Author: nicholas.randon@hp.com

--- a/undercloud-bm-source.yaml
+++ b/undercloud-bm-source.yaml
@@ -7,6 +7,10 @@ Parameters:
     Default: nova.virt.baremetal.ipmi.IPMI
     Description: Bare metal power manager driver.
     Type: String
+  PxeDeployTimeout:
+    Default: 2400
+    Description: Timeout for PXE deployment of baremetal nodes
+    Type: Number
 Resources:
   undercloudConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
@@ -27,6 +31,7 @@ Resources:
           db: mysql://nova:unset@localhost/nova_bm
           power_manager:
             Ref: PowerManager
-          pxe_deploy_timeout: 2400
+          pxe_deploy_timeout:
+            Ref: PxeDeployTimeout
         service-password:
           Ref: NovaPassword
