--- a/undercloud-vm-source.yaml
+++ b/undercloud-vm-source.yaml
@@ -7,6 +7,10 @@ Parameters:
     Default: nova.virt.baremetal.virtual_power_driver.VirtualPowerManager
     Description: Bare metal power manager driver.
     Type: String
+  PxeDeployTimeout:
+    Default: 2400
+    Description: Timeout for PXE deployment of baremetal nodes
+    Type: Number
   PowerSSHHost:
     Default: 192.168.122.1
     Description: SSH host to ssh to for power management operations.
@@ -39,7 +43,8 @@ Resources:
           db: mysql://nova:unset@localhost/nova_bm
           power_manager:
             Ref: PowerManager
-          pxe_deploy_timeout: 2400
+          pxe_deploy_timeout:
+            Ref: PxeDeployTimeout
           virtual_power:
             user:
               Ref: PowerUserName
