Adding undercloud ceilometer
-adding Undercloud Ceilometer that will collect statistics
 about Overcloud nodes, via SNMP

Change-Id: I1e90ad8d5bad16bc1c418ca2dbd78163abe6267c

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -15,6 +15,16 @@ Parameters:
     Default: i386
     Description: The architecture to use in Nova-BM - i386 or amd64.
     Type: String
+  CeilometerMeteringSecret:
+    Default: unset
+    Description: Secret shared by the ceilometer services.
+    Type: String
+    NoEcho: true
+  CeilometerPassword:
+    Default: unset
+    Description: The password for the ceilometer service account.
+    Type: String
+    NoEcho: true
   Flavor:
     Default: baremetal
     Description: Flavor to request when deploying.
@@ -126,7 +136,7 @@ Resources:
       OpenStack::ImageBuilder::Elements: [ boot-stack, heat-cfntools, neutron-network-node ]
       admin-password:
         Ref: AdminPassword
-      admin-token: 
+      admin-token:
         Ref: AdminToken
       controller-address:
         Fn::Select:
@@ -136,6 +146,11 @@ Resources:
             - Fn::GetAtt:
               - undercloud
               - networks
+      ceilometer:
+        db: mysql://ceilometer:unset@localhost/ceilometer
+        metering_secret: {Ref: CeilometerMeteringSecret}
+        service-password:
+          Ref: CeilometerPassword
       cinder:
         db: mysql://cinder:unset@localhost/cinder
         volume_size_mb: '5000'
