Add passthrough configuration glue.
This provides a means for users to pass configuration through to the
machines they are deploying without us modelling that.

Change-Id: I7134eb0c6be2d5cb1795b2f03cfba4afb69dc837
blueprint: passthrough-config

--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -45,3 +45,7 @@ Resources:
           base_image_id: {get_input: nova_image}
           live_update_image_id: {get_input: live_update_compute_image}
         completion-signal: {get_input: deploy_signal_id}
+  NovaComputePassthrough:
+    Type: OS::Heat::StructuredConfig
+    Properties:
+      config: {get_input: passthrough_config}
