Make size of loop device used by cinder LVM configurable
This was hard-coded to 5 gig, which is useless for anything other
than tempest runs and smoke testing

block-storage-nfs.yaml has intentionally not been changed, since
volume_size_mb is not used in that setup. Cleaning up that code will
be done separately.

Change-Id: I476b906a8d439d3e6643dd0c214965c5862418e8

--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -40,7 +40,8 @@ Resources:
           host: {get_input: controller_host}
         cinder:
           db: {get_input: cinder_dsn}
-          volume_size_mb: '5000'
+          volume_size_mb:
+            Ref: CinderLVMLoopDeviceSize
           service-password:
             Ref: CinderPassword
           iscsi-helper:
@@ -64,7 +65,8 @@ Resources:
             host: {get_input: controller_host}
           cinder:
             db: {get_input: cinder_dsn}
-            volume_size_mb: '5000'
+            volume_size_mb:
+              Ref: CinderLVMLoopDeviceSize
             service-password:
               Ref: CinderPassword
             iscsi-helper:
