--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -11,6 +11,10 @@ Parameters:
     Description: The keystone auth secret.
     Type: String
     NoEcho: true
+  CinderLVMLoopDeviceSize:
+    Default: 5000
+    Description: The size of the loopback file used by the cinder LVM driver.
+    Type: Number
   BaremetalArch:
     Default: i386
     Description: The architecture to use in Nova-BM - i386 or amd64.
@@ -153,7 +157,8 @@ Resources:
           Ref: CeilometerPassword
       cinder:
         db: mysql://cinder:unset@localhost/cinder
-        volume_size_mb: '5000'
+        volume_size_mb:
+          Ref: CinderLVMLoopDeviceSize
       completion-handle:
         Ref: controller0CompletionHandle
       db-password: unset
