Adding SNMPd auth credentials
-Undercloud Ceilometer has to have access to SNMPd credentials,
 so it can poll the Overcloud nodes
-In every Overcloud node, we need to set the same cretentials
 to SNMPd.conf

Change-Id: Icf7c0c1772b6380b7136108e61c15cafe17274ba

--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -14,6 +14,10 @@ Resources:
           metering_secret: {get_input: ceilometer_metering_secret}
           service-password: {get_input: ceilometer_password}
           compute_agent: {get_input: ceilometer_compute_agent}
+        snmpd:
+          export_MIB: UCD-SNMP-MIB
+          readonly_user_name: {get_input: snmpd_readonly_user_name}
+          readonly_user_password: {get_input: snmpd_readonly_user_password}
         glance:
           host: {get_input: glance_host}
         hosts: {get_input: static_hosts}
