--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -43,7 +43,7 @@ Parameters:
           }
         }
     Type: Json
-  KeyName: 
+  KeyName:
     Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
     Type: String
     Default: default
@@ -94,6 +94,15 @@ Parameters:
   CeilometerPassword:
     Default: unset
     Description: The password for the ceilometer service account.
+    Type: String
+    NoEcho: true
+  SnmpdReadonlyUserName:
+    Default: ro_snmp_user
+    Description: The user name for SNMPd with readonly rights running on all Overcloud nodes
+    Type: String
+  SnmpdReadonlyUserPassword:
+    Default: unset
+    Description: The user password for SNMPd with readonly rights running on all Overcloud nodes
     Type: String
     NoEcho: true
   NovaComputeDriver:
@@ -176,6 +185,8 @@ Resources:
         ceilometer_metering_secret: {Ref: CeilometerMeteringSecret}
         ceilometer_password: {Ref: CeilometerPassword}
         ceilometer_compute_agent: {Ref: CeilometerComputeAgent}
+        snmpd_readonly_user_name: {Ref: SnmpdReadonlyUserName}
+        snmpd_readonly_user_password: {Ref: SnmpdReadonlyUserPassword}
         glance_host: {Ref: GlanceHost}
         static_hosts: {Ref: StaticHosts}
         keystone_host: {Ref: KeystoneHost}
