--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -25,6 +25,15 @@ Parameters:
     Description: The password for the ceilometer service account.
     Type: String
     NoEcho: true
+  SnmpdReadonlyUserName:
+    Default: ro_snmp_user
+    Description: The user name for SNMPd with readonly rights running on all Overcloud nodes
+    Type: String
+  SnmpdReadonlyUserPassword:
+    Default: unset
+    Description: The user password for SNMPd with readonly rights running on all Overcloud nodes
+    Type: String
+    NoEcho: true
   Flavor:
     Default: baremetal
     Description: Flavor to request when deploying.
@@ -149,6 +158,10 @@ Resources:
       ceilometer:
         db: mysql://ceilometer:unset@localhost/ceilometer
         metering_secret: {Ref: CeilometerMeteringSecret}
+        snmpd_readonly_user_name:
+          Ref: SnmpdReadonlyUserName
+        snmpd_readonly_user_password:
+          Ref: SnmpdReadonlyUserPassword
         service-password:
           Ref: CeilometerPassword
       cinder:
