--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -117,6 +117,15 @@ Parameters:
     Description: The password for the ceilometer service account.
     Type: String
     NoEcho: true
+  SnmpdReadonlyUserName:
+    Default: ro_snmp_user
+    Description: The user name for SNMPd with readonly rights running on all Overcloud nodes
+    Type: String
+  SnmpdReadonlyUserPassword:
+    Default: unset
+    Description: The user password for SNMPd with readonly rights running on all Overcloud nodes
+    Type: String
+    NoEcho: true
   CloudName:
     Default: ''
     Description: The DNS name of this cloud. E.g. ci-overcloud.tripleo.org
@@ -376,6 +385,12 @@ Resources:
           metering_secret: {Ref: CeilometerMeteringSecret}
           service-password:
             Ref: CeilometerPassword
+        snmpd:
+          export_MIB: UCD-SNMP-MIB
+          readonly_user_name:
+            Ref: SnmpdReadonlyUserName
+          readonly_user_password:
+            Ref: SnmpdReadonlyUserPassword
         nova:
           compute_driver: libvirt.LibvirtDriver
           db: mysql://nova:unset@localhost/nova
@@ -422,7 +437,7 @@ Resources:
       config: {Ref: controllerConfig}
       server: {Ref: controller0}
       input_values:
-        controller_host:  
+        controller_host:
           Fn::Select:
             - 0
             - Fn::Select:
